doc updated and verify email endpoint
