# pkg/handlers/userHandlers.go
@@ -1,22 +1,17 @@
 package handlers
 
 import (
-	"encoding/json"
 	"fmt"
 	"github.com/gin-gonic/gin"
+	"github.com/tamiat/backend/pkg/emailVerification"
 	"golang.org/x/crypto/bcrypt"
 	"net/http"
 	"net/mail"
-	"regexp"
 	"strconv"
 
-	"github.com/gorilla/mux"
-
 	"github.com/tamiat/backend/pkg/domain/user"
-	"github.com/tamiat/backend/pkg/emailVerification"
 	"github.com/tamiat/backend/pkg/errs"
 	"github.com/tamiat/backend/pkg/middleware"
-	"github.com/tamiat/backend/pkg/response"
 	"github.com/tamiat/backend/pkg/service"
 )
 
@@ -75,12 +70,7 @@ func (receiver UserHandlers) Signup(ctx *gin.Context) {
 		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
-	code, err := emailVerification.SendEmail(userObj.Email)
-	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-
+	code := emailVerification.CodeGenerator()
 	hashOTP, err := bcrypt.GenerateFromPassword([]byte(code), 10)
 	if err != nil {
 		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
@@ -88,11 +78,17 @@ func (receiver UserHandlers) Signup(ctx *gin.Context) {
 
 	}
 	userObj.Otp = string(hashOTP)
-	err = receiver.Service.InsertOTP(userObj)
+	err = receiver.Service.InsertOTP(&userObj)
 	if err != nil {
 		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 
+	}
+
+	err = emailVerification.SendEmail(userObj.Email, code)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
 	}
 	//w.WriteHeader(http.StatusOK)
 	userObj.Password = ""
@@ -152,41 +148,54 @@ func (receiver UserHandlers) Login(ctx *gin.Context) {
 	jwtObj := JWT{Token: token}
 	ctx.JSON(http.StatusOK, jwtObj)
 }
-func (receiver UserHandlers) VerifyEmail(w http.ResponseWriter, r *http.Request) {
+
+type otp struct {
+	Otp string `json:"otp" form:"otp" binding:"required"`
+}
+
+// @Summary verify user email
+// @Description provide user id and otp sent to his email, it consists of 6 characters
+// @Consume application/x-www-form-urlencoded
+// @Produce  application/json
+// @Param  id path int true "User ID"
+// @Param otp formData string true "OTP"
+// @Success 200 {object} response.Response
+// @Failure 401 {pbject} errs.ErrResponse
+// @Failure 500 {object} errs.ErrResponse "Internal server error"
+// @Failure 400 {object} errs.ErrResponse "Bad request"
+// @Router /confirmEmail/{id} [post]
+func (receiver UserHandlers) VerifyEmail(ctx *gin.Context) {
 	var userObj user.User
-	json.NewDecoder(r.Body).Decode(&userObj)
-	otp := userObj.Otp
-	if len(otp) != 6 {
-		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode(response.NewResponse(errs.ErrInvalidVerificationCode.Error(), http.StatusBadRequest))
+	var otpObj otp
+	if err := ctx.ShouldBind(&otpObj); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	vars := mux.Vars(r)
-	pattern1, _ := regexp.Match(`^[0-9]+$`, []byte(vars["id"]))
-	if !pattern1 {
-		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode(errs.ErrContentParams)
+	if len(otpObj.Otp) != 6 {
+		fmt.Println(otpObj.Otp)
+		fmt.Println("error 1")
+		ctx.JSON(http.StatusUnauthorized, gin.H{"error": errs.ErrInvalidVerificationCode.Error()})
 		return
 	}
-	id := vars["id"]
-	//var userObj user.User
-	intId, err := strconv.Atoi(id)
-	fmt.Println(intId)
-	userObj.ID = intId
-	hashedOTP, err := receiver.Service.ReadOTP(userObj)
-	err = bcrypt.CompareHashAndPassword([]byte(hashedOTP), []byte(otp))
+	id, err := strconv.Atoi(ctx.Param("id"))
 	if err != nil {
-		w.WriteHeader(http.StatusUnauthorized)
-		json.NewEncoder(w).Encode(response.NewResponse(errs.ErrInvalidVerificationCode.Error(), http.StatusUnauthorized))
+		ctx.JSON(http.StatusBadRequest, errs.ErrParsingID)
 		return
 	}
-	err = receiver.Service.VerifyEmail(userObj)
+	userObj.ID = id
+	hashedOTP, err := receiver.Service.ReadOTP(&userObj)
+	err = bcrypt.CompareHashAndPassword([]byte(hashedOTP), []byte(otpObj.Otp))
 	if err != nil {
-		w.WriteHeader(http.StatusInternalServerError)
-		json.NewEncoder(w).Encode(errs.ErrDb)
+		fmt.Println("error 2")
+		ctx.JSON(http.StatusUnauthorized, gin.H{"error": errs.ErrInvalidVerificationCode.Error()})
 		return
 	}
-	w.WriteHeader(http.StatusOK)
+	err = receiver.Service.VerifyEmail(&userObj)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": errs.ErrDb.Error()})
+		return
+	}
+	ctx.JSON(http.StatusOK, otpObj)
 }
 
 // valid used to check email validation
